--- a/TestMapKit/Base.lproj/Main.storyboard
+++ b/TestMapKit/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,11 +20,11 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yy7-JN-RDC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="CIL-Ji-jnK"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Jyl-MU-SKB"/>
                                 </connections>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grD-sR-Hwt">
-                                <rect key="frame" x="16" y="629" width="70" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grD-sR-Hwt">
+                                <rect key="frame" x="16" y="629" width="53" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Refresh">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,6 +37,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yy7-JN-RDC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="50e-3R-Axb"/>
+                            <constraint firstItem="grD-sR-Hwt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8b2-zK-9Yw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="grD-sR-Hwt" secondAttribute="bottom" constant="8" id="CWB-l7-ihK"/>
                             <constraint firstAttribute="trailing" secondItem="yy7-JN-RDC" secondAttribute="trailing" id="c3v-hw-Eki"/>
                             <constraint firstItem="yy7-JN-RDC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eKf-3m-ngP"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="yy7-JN-RDC" secondAttribute="bottom" id="wTD-U3-XAG"/>
